--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             padding: 50px;
             background: #1e1e1e;
         }
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
         section {
             padding: 50px 20px;
             max-width: 1000px;
@@ -40,6 +46,7 @@
 </head>
 <body>
     <header>
+        <img src="profile.jpg" alt="Ahmed Al Harazi">
         <h1>Ahmed Al Harazi</h1>
         <p>Entrepreneur | E-commerce Expert | Business Consultant</p>
     </header>
